<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registro_Paciente">

    <SearchView
        android:id="@+id/busqueda"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:contentDescription="@null"
        android:queryHint="@string/Buscar"
        style="@style/SerchStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <ImageView
        android:id="@+id/tablero"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/curved_frame_1" />

    <TextView
        android:id="@+id/dato_pro"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/Registro_text_1"
        android:textSize="25sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/nom_pro"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:hyphenationFrequency="none"
        android:text="@string/Nombre_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <EditText
        android:id="@+id/editText_pro_1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:hint="@string/Nombre_registro_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/ape_pro_2"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:hyphenationFrequency="none"
        android:text="@string/Apellido_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/editText_pro_2"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:hint="@string/Apellido_registro_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/tel_pro_3"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:hyphenationFrequency="none"
        android:text="@string/Telefono_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/editText_pro_3"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:hint="@string/Telefono_registro_edit"
        android:hyphenationFrequency="none"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/dir_pro_4"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:hyphenationFrequency="none"
        android:text="@string/Direccion_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <EditText
        android:id="@+id/editText_pro_4"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:hint="@string/Direccion_registro_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/dato_mas"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/Registro_text_2"
        android:textSize="25sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <TextView
        android:id="@+id/nom_mas_1"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/Nombre_registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <EditText
        android:id="@+id/editText_mas_1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginTop="2dp"
        android:hint="@string/Nombre_registro_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/ape_mas_2"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/F_N"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/editText_mas_2"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:hint="@string/F_N_edit"
        android:hyphenationFrequency="none"
        android:inputType="time"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <TextView
        android:id="@+id/raza_mas_3"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/Raza"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/editText_mas_3"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_marginTop="2dp"
        android:hint="@string/Raza_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/raza_mas_4"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/Pelaje"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/editText_mas_4"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_marginTop="2dp"
        android:hint="@string/Pelaje_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <TextView
        android:id="@+id/raza_mas_5"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/P"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/editText_mas_5"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:hint="@string/P_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <TextView
        android:id="@+id/raza_mas_6"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hyphenationFrequency="none"
        android:text="@string/S"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <EditText
        android:id="@+id/editText_mas_6"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:hint="@string/S_edit"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <Button
        android:id="@+id/bot_register_1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Atras"
        android:background="@drawable/style_btn_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/bot_register_2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/style_btn_1"
        android:onClick="GuardarDatos"
        android:text="@string/Guardar"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>