<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Mostrar_Registro">

    <SearchView
        android:id="@+id/busqueda"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:queryHint="@string/Buscar"
        android:background="@drawable/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/muestra_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registro_Muestra_1"
        android:textSize="35sp"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="375dp"
        android:layout_height="455dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tabla_title_1"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:text="@string/tabla_title_1"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tabla_title_2"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:text="@string/tabla_title_2"
                android:textColor="@color/Black"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tabla_title_3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/tabla_title_3"
                android:textColor="@color/Black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>


    <Button
        android:id="@+id/reg_boton_1"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:background="@drawable/style_btn_3"
        android:gravity="center"
        android:onClick="Atras"
        android:text="@string/Atras"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/reg_boton_2"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:background="@drawable/style_btn_3"
        android:gravity="center"
        android:onClick="Agregar"
        android:text="@string/Añadir"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>